--- a/P/Work.WebApp/Views/Shared/_Layout.cshtml
+++ b/P/Work.WebApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
 
         var aj_Init = '@Url.Action("aj_Init")';
         var aj_AdrTW = '@Url.Action("ajax_AdrTW")';
+        var allowyear=@DotWeb.CommSetup.CommWebSetup.WorkYear;
     </script>
     @RenderSection("IncludeScript", false)
 </head>
