--- a/P/Work.WebApp/Views/AssemblyBatch/Index.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/Index.cshtml
@@ -11,7 +11,7 @@
     <form class="query-form" ng-submit="Init_Query()">
         <fieldset>
             <!--
-                  <label>法會時間(國曆)： 起</label>
+            <label>法會時間(國曆)： 起</label>
             <input type="text" datepicker-popup="yyyy/MM/dd" ng-model="sd.startDate" is-open="openedStart" datepicker-options="dateOptions" @*date-disabled="disabled(date, mode)"*@ close-text="Close" ng-click="openStart($event)" />
             <label>迄</label>
             <input type="text" datepicker-popup="yyyy/MM/dd" ng-model="sd.endDate" is-open="openedEnd" datepicker-options="dateOptions" @*date-disabled="disabled(date, mode)"*@ close-text="Close" ng-click="openEnd($event)" />
@@ -21,8 +21,11 @@
             <button type="submit">
                 <i class="fa fa-search"></i>查詢
             </button>
-            <button type="button" ng-click="copy()">
+            <button type="button" ng-click="copy()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
                 <i class="fa fa-files-o"></i>複製前一年(今年沒資料才可按)
+            </button>
+            <button type="button" ng-click="copySite()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
+                <i class="fa fa-files-o"></i>燈位
             </button>
         </fieldset>
     </form>
@@ -65,6 +68,7 @@
         </table>
         @Html.Partial("NavPage")
     </div>
+    <span style="color:red">1.請每年度各別新增法會批次資料(請勿不同年度,修改時間後重複使用)</span>
 </script>
 <script type="text/ng-template" id="dataEdit">
     <!-- 編輯畫面-->
@@ -95,7 +99,7 @@
             <tr>
                 <th>梯次上限人數</th>
                 <td colspan="3">
-                    <input type="number" min="1" ng-model="fd.batch_qty" required />
+                    <input type="number" min="1" ng-model="fd.batch_qty" required disabled />
                 </td>
             </tr>
         </table>
