--- a/P/Work.WebApp/Views/AssemblyBatch/Index.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/Index.cshtml
@@ -39,10 +39,11 @@
                 <th width="5%" class="text-center">編輯</th>
                 <th width="5%" class="text-center">刪除</th>
                 <th width="10%">梯次名稱</th>
-                <th width="10%">法會時間(國曆)</th>
-                <th width="10%">農曆年</th>
-                <th width="10%">農曆月</th>
-                <th width="10%">農曆日</th>
+                <th width="6%">法會時間(國曆)</th>
+                <th width="6%">法會時段</th>
+                <th width="8%">農曆年</th>
+                <th width="8%">農曆月</th>
+                <th width="8%">農曆日</th>
                 <th width="10%">梯次上限人數</th>
             </tr>
             <tr ng-repeat="gd in Grid_Items">
@@ -59,7 +60,8 @@
                     </button>
                 </td>
                 <td>{{gd.batch_title}}</td>
-                <td>{{gd.batch_date | date:'yyyy-MM-dd HH:mm'}}</td>
+                <td>{{gd.batch_date | date:'yyyy-MM-dd'}}</td>
+                <td>{{gd.batch_timeperiod | OptionStr:timeperiod_list}}</td>
                 <td>{{gd.lunar_y}}</td>
                 <td>{{gd.lunar_m}}</td>
                 <td>{{gd.lunar_d}}</td>
@@ -87,7 +89,8 @@
             <tr>
                 <th>法會時間(國曆)</th>
                 <td>
-                    <input type="date" ng-model="fd.batch_date" required />
+                    <input type="date" ng-model="fd.batch_date" required />日期
+                    <select ng-model="fd.batch_timeperiod" style="width:15%" required ng-options="m.value as m.label for m in timeperiod_list"></select>
                 </td>
                 <th>法會時間(農曆)</th>
                 <td width="30%">
