--- a/P/Work.WebApp/Views/AssemblyBatch/Index.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/Index.cshtml
@@ -21,9 +21,9 @@
             <button type="submit">
                 <i class="fa fa-search"></i>查詢
             </button>
-            <button type="button" ng-click="copy()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
+            @*<button type="button" ng-click="copy()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
                 <i class="fa fa-files-o"></i>複製前一年(今年沒資料才可按)
-            </button>
+            </button>*@
             @*<button type="button" ng-click="copySite()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
                 <i class="fa fa-files-o"></i>燈位
             </button>*@
@@ -73,7 +73,8 @@
         @Html.Partial("NavPage")
     </div>
     <span style="color:red">1.請每年度各別新增法會梯次資料(請勿不同年度,修改時間後重複使用)</span></br>
-    <span style="color:red">2.法會每梯次500人</span>
+    <span style="color:red">2.法會每梯次500人</span></br>
+    <span style="color:red">3.已有交易紀錄的法會梯次無法刪除</span>
 </script>
 <script type="text/ng-template" id="dataEdit">
     <!-- 編輯畫面-->
