--- a/P/Work.WebApp/Views/AssemblyBatch/Index.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/Index.cshtml
@@ -22,11 +22,11 @@
                 <i class="fa fa-search"></i>查詢
             </button>
             @*<button type="button" ng-click="copy()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
-                <i class="fa fa-files-o"></i>複製前一年(今年沒資料才可按)
-            </button>*@
+                    <i class="fa fa-files-o"></i>複製前一年(今年沒資料才可按)
+                </button>*@
             @*<button type="button" ng-click="copySite()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
-                <i class="fa fa-files-o"></i>燈位
-            </button>*@
+                    <i class="fa fa-files-o"></i>燈位
+                </button>*@
         </fieldset>
     </form>
     <div class="grid-list">
@@ -41,11 +41,11 @@
                 <th width="8%">梯次名稱</th>
                 <th width="8%">法會時間(國曆)</th>
                 <th width="6%">法會時段</th>
-                <th width="8%">農曆年</th>
-                <th width="8%">農曆月</th>
-                <th width="8%">農曆日</th>
+                <th width="5%">農曆年</th>
+                <th width="5%">農曆月</th>
+                <th width="5%">農曆日</th>
                 <th width="5%">上限人數</th>
-                <th width="5%">報名人數</th>
+                <th width="48%" class="text-center" style="text-align:center">報名人數</th>
             </tr>
             <tr ng-repeat="gd in Grid_Items">
                 <td>
@@ -67,7 +67,26 @@
                 <td>{{gd.lunar_m}}</td>
                 <td>{{gd.lunar_d}}</td>
                 <td>{{gd.batch_qty}}</td>
-                <td>{{gd.count}}</td>
+                <td>
+                    <table class="table text-bordered">
+                        <thead>
+                            <tr>
+                                <th class="text-center">個別祖先</th>
+                                <th class="text-center">歷代祖先</th>
+                                <th class="text-center">冤親債主</th>
+                                <th class="text-center">嬰靈</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="success">
+                                <td class="text-center">{{gd.count_1401}}</td>
+                                <td class="text-center">{{gd.count_1402}}</td>
+                                <td class="text-center">{{gd.count_1403}}</td>
+                                <td class="text-center">{{gd.count_1404}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
             </tr>
         </table>
         @Html.Partial("NavPage")
