--- a/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
@@ -26,6 +26,9 @@
             <button type="button" ng-click="DownLoadExcel_BatchRollPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
                 <i class="fa fa-print"></i>名冊列印
             </button>
+            <button type="button" ng-click="DownLoadExcel_PaperMoneyShuWenPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
+                <i class="fa fa-print"></i>金紙疏文
+            </button>
         </fieldset>
     </form>
     <div class="grid-list">
