超渡法會蝶文(四種產品) excel

--- a/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
@@ -29,6 +29,9 @@
             <button type="button" ng-click="DownLoadExcel_PaperMoneyShuWenPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
                 <i class="fa fa-print"></i>金紙疏文
             </button>
+            <button type="button" ng-click="DownLoadExcel_DieWenPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
+                <i class="fa fa-print"></i>蝶文
+            </button>
         </fieldset>
     </form>
     <div class="grid-list">
