--- a/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
@@ -24,13 +24,16 @@
         </fieldset>
         <fieldset>
             <button type="button" ng-click="DownLoadExcel_BatchRollPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
-                <i class="fa fa-print"></i>名冊列印
+                <i class="fa fa-print"></i>名冊
             </button>
             <button type="button" ng-click="DownLoadExcel_PaperMoneyShuWenPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
                 <i class="fa fa-print"></i>金紙疏文
             </button>
             <button type="button" ng-click="DownLoadExcel_DieWenPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
                 <i class="fa fa-print"></i>蝶文
+            </button>
+            <button type="button" ng-click="DownLoadExcel_ShuWenPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
+                <i class="fa fa-print"></i>個別、歷代祖先 疏文
             </button>
         </fieldset>
     </form>
