--- a/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
@@ -4,6 +4,9 @@
 }
 @section IncludeScript{
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <script>
+        var userid = '@ViewBag.ID';
+    </script>
     @Scripts.Render("~/batchCountCtr")
 }
 <div ui-view></div>
