--- a/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
@@ -26,16 +26,16 @@
             </button>
         </fieldset>
         <fieldset>
-            <button type="button" ng-click="DownLoadExcel_BatchRollPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
+            <button type="button" ng-click="DownLoadExcel_BatchRollPrint()">
                 <i class="fa fa-print"></i>名冊
             </button>
-            <button type="button" ng-click="DownLoadExcel_PaperMoneyShuWenPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
+            <button type="button" ng-click="DownLoadExcel_PaperMoneyShuWenPrint()">
                 <i class="fa fa-print"></i>金紙疏文
             </button>
-            <button type="button" ng-click="DownLoadExcel_DieWenPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
-                <i class="fa fa-print"></i>蝶文
+            <button type="button" ng-click="DownLoadExcel_DieWenPrint()">
+                <i class="fa fa-print"></i>牒文
             </button>
-            <button type="button" ng-click="DownLoadExcel_ShuWenPrint()" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
+            <button type="button" ng-click="DownLoadExcel_ShuWenPrint()">
                 <i class="fa fa-print"></i>個別、歷代祖先 疏文
             </button>
         </fieldset>
