1.法會報表輸出 今天金儒在line上說增加超渡法會總名冊excel

--- a/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
@@ -29,6 +29,9 @@
             <button type="button" ng-click="DownLoadExcel_BatchRollPrint()">
                 <i class="fa fa-print"></i>名冊
             </button>
+            <button type="button" ng-click="DownLoadExcel_BatchAllRollPrint()">
+                <i class="fa fa-print"></i>總名冊
+            </button>
             <button type="button" ng-click="DownLoadExcel_PaperMoneyShuWenPrint()">
                 <i class="fa fa-print"></i>金紙疏文
             </button>
