1.會員郵寄標籤 +抓 超渡法會 類型產品資料 2.超渡法會excel (8/10 email 通知) 版面調整

--- a/P/Work.WebApp/Views/MemberLabel/Index.cshtml
+++ b/P/Work.WebApp/Views/MemberLabel/Index.cshtml
@@ -33,7 +33,7 @@
         <button type="button" ng-click="DownLoadExcel_PostPrint(2)" ng-show="@(ViewBag.ID == 1000001?"true":"false")">
             <i class="fa fa-files-o"></i>產生香油(薦拔祖先)、香油(冤親債主)、香油(嬰靈)郵寄標籤
         </button>
-        <label class="text-center" style="color:red">備註：查詢有購買產品為點燈或福燈之訂單主檔的戶長資料。</label>
+        <label class="text-center" style="color:red">備註：查詢有購買產品為超渡法會、點燈或福燈之訂單主檔的戶長資料。</label>
     </fieldset>
 </form>
 <div class="grid-list">
