1.法會excel 增加訂單起訖日搜尋欄位、必更新搜尋條件 2.金紙疏文、牒文、祖先疏文 排序依訂單日期列印 3.修正日期套件與樣板一起套用 若未指定樣板controller 日期套件會出現bug

--- a/P/Work.WebApp/Views/WishLight/Index.cshtml
+++ b/P/Work.WebApp/Views/WishLight/Index.cshtml
@@ -15,7 +15,7 @@
         <fieldset>
             <label>年度： </label>
             <select ng-model="sd.year" ng-options="m as (m+'年') for m in year_list"></select>
-            <label>訂單日期： 起</label>
+            <label>訂單日期： 起</label>{{openedStart}}-{{openedEnd}}
             <input type="text" datepicker-popup="yyyy/MM/dd" ng-model="sd.startDate" is-open="openedStart" datepicker-options="dateOptions" @*date-disabled="disabled(date, mode)"*@ close-text="Close" ng-click="openStart($event)" />
             <label>迄</label>
             <input type="text" datepicker-popup="yyyy/MM/dd" ng-model="sd.endDate" is-open="openedEnd" datepicker-options="dateOptions" @*date-disabled="disabled(date, mode)"*@ close-text="Close" ng-click="openEnd($event)" />
