--- a/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
+++ b/P/Work.WebApp/Views/AssemblyBatch/BatchCount.cshtml
@@ -15,6 +15,11 @@
         <fieldset>
             <label>法會年度： </label>
             <select ng-model="sd.year" ng-options="m as (m+'年') for m in year_list"></select>
+            <label>訂單日期： 起</label>
+            <input type="text" datepicker-popup="yyyy/MM/dd" ng-model="sd.startDate" is-open="openedStart" datepicker-options="dateOptions" @*date-disabled="disabled(date, mode)"*@ close-text="Close" ng-click="openStart($event)" />
+            <label>迄</label>
+            <input type="text" datepicker-popup="yyyy/MM/dd" ng-model="sd.endDate" is-open="openedEnd" datepicker-options="dateOptions" @*date-disabled="disabled(date, mode)"*@ close-text="Close" ng-click="openEnd($event)" />
+            <br />
             <label>法會梯次： </label>
             <select ng-model="sd.assembly_batch_sn" ng-options="m.batch_sn as (m.batch_title+'('+(m.batch_date | date:'yyyyMMdd')+(m.batch_timeperiod |  OptionStr:timeperiod_list)+')'+'__'+m.count) for m in bath_list">
                 <option value="">全部</option>
@@ -41,7 +46,9 @@
             <button type="button" ng-click="DownLoadExcel_ShuWenPrint()">
                 <i class="fa fa-print"></i>個別、歷代祖先 疏文
             </button>
+            <label class="text-center" style="color:red">備註：名冊、總名冊 Excel依祈福燈位排序;金紙疏文、牒文、個別歷代祖先疏文 Excel依訂單日期排序。</label>
         </fieldset>
+       
     </form>
     <div class="grid-list">
         <table class="table-master">
